[package]
name        = "mars-owner"
version     = "1.2.0"
authors     = ["grod220 <gabe.r@delphilabs.io>", "Piotr Babel <piotr@delphilabs.io>"]
description = "A package for managing owner role in cosmwasm contracts"
license     = "GPL-3.0"
edition     = "2021"
repository  = "https://github.com/mars-protocol/owner"
homepage    = "https://marsprotocol.io"
keywords    = ["mars", "cosmos", "cosmwasm"]

[features]
default = []
emergency-owner = []

[dependencies]
cosmwasm-schema = "1.2.5"
cosmwasm-std    = "1.2.5"
cw-storage-plus = "1.0.1"
schemars        = "0.8.12"
thiserror       = "1.0.40"
